Bug 77844 - FILEOPEN: [regression] doc file has header enabled when it should not
Summary: FILEOPEN: [regression] doc file has header enabled when it should not
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.1.0.4 release
Hardware: Other All
: high major
Assignee: Luke Deller
URL:
Whiteboard: interoperability ww8 target:4.4.0 tar...
Keywords: bibisected, regression
Depends on:
Blocks: DOC-Header-Footer
  Show dependency treegraph
 
Reported: 2014-04-24 01:51 UTC by Yousuf Philips (jay) (retired)
Modified: 2019-09-30 09:16 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
purple line in header (6.41 KB, image/jpg)
2014-04-24 01:51 UTC, Yousuf Philips (jay) (retired)
Details
converted .doc file (186.50 KB, application/msword)
2014-04-24 01:52 UTC, Yousuf Philips (jay) (retired)
Details
sample doc for test cases (28.00 KB, application/msword)
2014-07-07 13:01 UTC, Luke Deller
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2014-04-24 01:51:46 UTC
Created attachment 97841 [details]
purple line in header

I downloaded the .docx file found at < http://download.microsoft.com/documents/rus/microsoft4you/How_to_license_the_operating_system_Windows_8_new.docx > and used the microsoft compatibility pack to convert it to a .doc file. Then i opened the .doc file in LibO and on each page, a purple line appears in the header border. This is a regression since 4.1.
Comment 1 Yousuf Philips (jay) (retired) 2014-04-24 01:52:19 UTC
Created attachment 97842 [details]
converted .doc file
Comment 2 Jorendc 2014-04-26 13:55:09 UTC
Reproducible using Windows 8.1 with LibreOffice Version: 4.1.0.4 
Build ID: 89ea49ddacd9aa532507cbf852f2bb22b1ace28

Indeed not reproducible using Versie 4.0.6.2 .6.2 (Bouw-id: 2e2573268451a50806fcd60ae2d9fe01dd0ce24)

Still reproducible using Version: 4.3.0.0.alpha1+
Build ID: f4a6837025a293312cbc43b9c527851362f11030
TinderBox: Win-x86@47-TDF, Branch:MASTER, Time: 2014-04-26_09:21:18
Comment 3 Xisco Faulí 2014-05-29 14:50:36 UTC
bibisected:
 a7e54955e9f49e8b59dfd8c4533785a680b1796c is the first bad commit
commit a7e54955e9f49e8b59dfd8c4533785a680b1796c
Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com>
Date:   Wed Oct 16 11:07:50 2013 +0000

    source-hash-5da10275a7475efdbfd9de14ea58cf8f4c6c1582
    
    commit 5da10275a7475efdbfd9de14ea58cf8f4c6c1582
    Author:     Stephan Bergmann <sbergman@redhat.com>
    AuthorDate: Fri Mar 1 17:09:45 2013 +0100
    Commit:     Stephan Bergmann <sbergman@redhat.com>
    CommitDate: Fri Mar 1 17:18:29 2013 +0100
    
        Related rhbz#915743: Abort UCB call from SvtMatchContext_Impl::Stop
    
        ...as otherwise the SvtMatchContext_Impl thread can continue to run for
        arbitrarily long, and the other thread calling Stop() and join() will block.
    
        However, especially the WebDAV UCP does not properly support aborting commands,
        see 260afe56fd6b2f34de8290f3cdb7d1df5b88f8a8 " neon commands cannot be aborted",
        so this is not yet enough to actually fix rhbz#915743 "thread deadlock/slow
        join in insert->hyperlink in impress."
    
        Change-Id: I0da899f824763e1b3d19bb5b38d906feb690b623

:100644 100644 fd22aadcebcf1ca20b6c2fcdb9e135deeb9b5885 8a0f14e1bb71d7ecdf8086c62e9769bb7f2d09b8 M	autogen.log
:100644 100644 5af869ab53b50329a270e7d4e2587f802bf68afb 8519bf956c5e06a85818d380070eedc0ef846790 M	ccache.log
:100644 100644 63cd7351c9d6feb098661a5783d51bb172d8a306 33abac29aad7182260562465482b493d94b78a83 M	commitmsg
:100644 100644 e9ea867065a69fa4f0fbbb5c2abb40baeeabd307 21fc5294b2cb922862b78327b6b8a3cd953f38b5 M	dev-install.log
:100644 100644 4c087a5ff52a8cef08f31417ac650666b1d9d0af c1cc87465560a589137349c81641a62968242386 M	make.log
:040000 040000 ece742cbaf9101d015210ea8da6c00ad7a4457c7 9ff9cbceea1fe6b0ad1b17fe9068b2c8e32a6cbb M	opt

# bad: [423a84c4f7068853974887d98442bc2a2d0cc91b] source-hash-c15927f20d4727c3b8de68497b6949e72f9e6e9e
# good: [65fd30f5cb4cdd37995a33420ed8273c0a29bf00] source-hash-d6cde02dbce8c28c6af836e2dc1120f8a6ef9932
git bisect start 'latest' 'oldest'
# bad: [e02439a3d6297a1f5334fa558ddec5ef4212c574] source-hash-6b8393474974d2af7a2cb3c47b3d5c081b550bdb
git bisect bad e02439a3d6297a1f5334fa558ddec5ef4212c574
# good: [8f4aeaad2f65d656328a451154142bb82efa4327] source-hash-1885266f274575327cdeee9852945a3e91f32f15
git bisect good 8f4aeaad2f65d656328a451154142bb82efa4327
# good: [9995fae0d8a24ce31bcb5e9cd0459b69cfbf7a02] source-hash-8600bc24bbc9029e92bea6102bff2921bc10b33e
git bisect good 9995fae0d8a24ce31bcb5e9cd0459b69cfbf7a02
# bad: [8ad82bc1416a07501651e8d96fe268e47d3931d3] source-hash-13821254f88d2c5488fba9fe6393dcf4ae810db4
git bisect bad 8ad82bc1416a07501651e8d96fe268e47d3931d3
# bad: [238338bc4111eb82429ea47384d4012bcd7cdc3e] source-hash-b6ba04639b9922f6717f79ac4be215e09691d7a9
git bisect bad 238338bc4111eb82429ea47384d4012bcd7cdc3e
# bad: [89dc8a802d1625e0efd88ba0fb720b22be87f3f0] source-hash-da03bb1ee6a69d2f4fef4c3ca0adc0ba9588bd19
git bisect bad 89dc8a802d1625e0efd88ba0fb720b22be87f3f0
# bad: [fe956dc63cc7ed1831f0e7e9e7253ea4d8c99549] source-hash-b15f095293c6127ecaef2f0fa3a1683e72392835
git bisect bad fe956dc63cc7ed1831f0e7e9e7253ea4d8c99549
# good: [cd762eb968ba8783f726b67d9d70b0a76f4eb55d] source-hash-c9562064740baed3a9978723c5fe77b44a13a7aa
git bisect good cd762eb968ba8783f726b67d9d70b0a76f4eb55d
# bad: [a7e54955e9f49e8b59dfd8c4533785a680b1796c] source-hash-5da10275a7475efdbfd9de14ea58cf8f4c6c1582
git bisect bad a7e54955e9f49e8b59dfd8c4533785a680b1796c
# good: [5e90d936616ff95724eaa3e3a0a7c7a9747e9b44] source-hash-ba446dd58a4ad324d242afcd5b28d3b4dff5a881
git bisect good 5e90d936616ff95724eaa3e3a0a7c7a9747e9b44
# first bad commit: [a7e54955e9f49e8b59dfd8c4533785a680b1796c] source-hash-5da10275a7475efdbfd9de14ea58cf8f4c6c1582
Comment 4 Michael Stahl 2014-07-04 23:02:53 UTC
it is correct that there is a purple line in the header;
if you open the file with Word and enable the header then
you see a purple line as well.

the problem is, Word does not show a header, i.e., the
header should not be displayed at all.

unfortunately the bibisect result falls into the 6 week hole
in the main bibisect repo...

... fortunately the jlallement repo has lots of builds in
that timeframe, range is:
 1c5cb060f1503ef6d139a3a0cee2c173d8c60615..67fbad1d1d593416136264aefb66d324e8e75bd2

regression from:

commit 1e113cb7604e1509e7d598a9be329f1f7b6e9322
Author:     Luke Deller <luke@deller.id.au>
AuthorDate: Sun Feb 10 02:31:47 2013 +1100

    import different first page header/footer from doc
Comment 5 Luke Deller 2014-07-06 11:05:50 UTC
Thanks Michael, I'll have a look
Comment 6 Luke Deller 2014-07-07 13:01:45 UTC
Created attachment 102373 [details]
sample doc for test cases

Here is a sample document that I created from scratch in Word 2010 to use for test cases, which exhibits the same bug.

In Word, if all pages of a section have blank header content, then headers are completely disabled and styles such as borders are not shown.  However if any page in the section has header content, then headers are enabled for all pages of the section, and styles such as borders are shown.

The bug here is that LO sees a first-page header in this section, so it enables headers for the section; but actually the first-page header is not visible because the "different header on first page" option is disabled, so it should be ignored for this purpose.
Comment 7 Yousuf Philips (jay) (retired) 2014-07-07 20:59:12 UTC
Glad you were able to find out the cause of the problem Luke.
Comment 8 Commit Notification 2014-07-09 10:59:48 UTC
Luke Deller committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f312ef98de57a5926be67421395544bb9d41b809

fix fdo#77844: header wrongly enabled from .doc



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2014-07-09 11:22:27 UTC
Luke Deller committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=025a9cf3a8ceba61d8424d7dcb029ab9607a0d73&h=libreoffice-4-3

fix fdo#77844: header wrongly enabled from .doc


It will be available in LibreOffice 4.3.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2014-07-09 11:24:06 UTC
Luke Deller committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7cae592e57d2cfccf55583f18e65fb0f67c7fa42&h=libreoffice-4-2

fix fdo#77844: header wrongly enabled from .doc


It will be available in LibreOffice 4.2.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Michael Stahl 2014-07-09 11:25:44 UTC
great, this one looks fixed now
Comment 12 Commit Notification 2014-07-10 14:18:31 UTC
Luke Deller committed a patch related to this issue.
It has been pushed to "libreoffice-4-3-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=758acdd6082fe89a4bd96fe65a0d609d511ddda5&h=libreoffice-4-3-0

fix fdo#77844: header wrongly enabled from .doc


It will be available already in LibreOffice 4.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 Robinson Tryon (qubit) 2015-12-17 07:58:49 UTC Comment hidden (obsolete)