fix fdo#77844: header wrongly enabled from .doc

The LO page style needs page headers to be turned on if the
corresponding .doc file section has a left (=even) page header or a
first page header.

However this should not be triggered in the case where a first page
header is present but hidden due to the "different first page" header
option being disabled. This case is fixed by this commit.

Change-Id: If3de0df45378587fdbdecc6a091d2f4b60940b43
Reviewed-on: https://gerrit.libreoffice.org/10100
Reviewed-by: Michael Stahl <mstahl@redhat.com>
Tested-by: Michael Stahl <mstahl@redhat.com>
(cherry picked from commit f312ef98de57a5926be67421395544bb9d41b809)
Signed-off-by: Michael Stahl <mstahl@redhat.com>